--- a/learntec/ae.html
+++ b/learntec/ae.html
@@ -241,13 +241,13 @@
                     features and capabilities. <br> </p>
 
             </div>
-            <div class="clearfix" style="padding-left: 45%;">
+        <!--    <div class="clearfix" style="padding-left: 45%;">
 
                 <button type="submit" class="Confirmbtn" onclick="myFunction()"
                     style="width: 30%; height: 50px; background: #002356;">Check Curriculum here</button>
-            </div>
+            </div> -->
             <div id="myDIV">
-                <div class="counter-area pb-20 pt-60">
+                <div class="counter-area pb-10 pt-60">
                     <div class="container">
                         <div class="counter-bg">
                             <div class="row">
@@ -357,7 +357,13 @@
                     </div>
                 </div>
             </div>
+            <div class="clearfix" style="padding-left: 45%;">
+
+                <button type="submit" class="Confirmbtn" onclick="myFunction()"
+                    style="width: 30%; height: 50px; background: #002356;">LogIn / Register</button>
+            </div>
         </section>
+    
 
         <!-- ======= Team Section ======= -->
         <!-- <section id="team" class="team">
@@ -559,7 +565,7 @@
                                 <p>
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
-                                    <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
+                                    <strong>Phone:</strong> +91 7975935848,  <br>
                                     <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
 
