--- a/learntec/blog.html
+++ b/learntec/blog.html
@@ -450,7 +450,7 @@
                                 <p>
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
-                                    <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
+                                    <strong>Phone:</strong> +91 7975935848,  <br>
                                     <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
 
