--- a/learntec/course.html
+++ b/learntec/course.html
@@ -899,13 +899,13 @@
         <!-- course-area-end -->
 
         <!-- team-area-start -->
-        <div class="team-area grey-bg pt-130 pb-100">
+       <!-- <div class="team-area grey-bg pt-130 pb-100">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-65">
                             <!-- <span><i class="fal fa-ellipsis-h"></i> Team Members <i
-                                    class="fal fa-ellipsis-h"></i></span> -->
+                                    class="fal fa-ellipsis-h"></i></span> 
                             <h2>Expert Instructors</h2>
                         </div>
                     </div>
@@ -1017,8 +1017,125 @@
                     </div>
                 </div>
             </div>
+        </div> -->
+        <!-- team-area-end -->
+
+
+         <!-- team-area-start -->
+         <div class="team-area grey-bg pt-20 pb-20">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
+                        <div class="section-title text-center mb-65">
+                            <!--  <span><i class="fal fa-ellipsis-h"></i> Team Members <i
+                                    class="fal fa-ellipsis-h"></i></span> -->
+                            <h2>Expert Instructors</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="team-wrapper mb-30">
+                            <div class="team-img pos-rel">
+                                <div class="fix">
+                                    <img src="assets/img/team/team_1.png" alt="">
+                                </div>
+                                <div class="team-02-icon">
+                                    <div class="inner-team-icon pos-rel">
+                                        <div class="team-icon">
+                                            <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                            <a class="google" href="#"><i class="fab fa-youtube"></i></a>
+                                            <a class="fb" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </div>
+                                        <a href="#"><i class="fal fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-text">
+                                <h4 class="text_align"><a href="">Subrat S</a></h4>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="team-wrapper mb-30">
+                            <div class="team-img pos-rel">
+                                <div class="fix">
+                                    <img src="assets/img/team/t2.jpg" alt="">
+                                </div>
+                                <div class="team-02-icon">
+                                    <div class="inner-team-icon pos-rel">
+                                        <div class="team-icon">
+                                            <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                            <a class="google" href="#"><i class="fab fa-youtube"></i></a>
+                                            <a class="fb" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </div>
+                                        <a href="#"><i class="fal fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-text">
+                                <h4 class="text_align"><a href="">Basavana</a></h4>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="team-wrapper mb-30">
+                            <div class="team-img pos-rel">
+                                <div class="fix">
+                                    <img src="assets/img/team/t3.png" alt="">
+                                </div>
+                                <div class="team-02-icon">
+                                    <div class="inner-team-icon pos-rel">
+                                        <div class="team-icon">
+                                            <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                            <a class="google" href="#"><i class="fab fa-youtube"></i></a>
+                                            <a class="fb" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </div>
+                                        <a href="#"><i class="fal fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-text">
+                                <h4 class="text_align"><a href="">Chaithra V</a></h4>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="team-wrapper mb-30">
+                            <div class="team-img pos-rel">
+                                <div class="fix">
+                                    <img src="assets/img/team/shetty.webp" alt="">
+                                </div>
+                                <div class="team-02-icon">
+                                    <div class="inner-team-icon pos-rel">
+                                        <div class="team-icon">
+                                            <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                            <a class="google" href="#"><i class="fab fa-youtube"></i></a>
+                                            <a class="fb" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </div>
+                                        <a href="#"><i class="fal fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-text">
+                                <h4 class="text_align"><a href="">Pavan Shetty</a></h4>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
         <!-- team-area-end -->
+
+
+
+
+
 
         <!-- blog-area-start -->
         <div class="blog-area pt-130 pb-100">
@@ -1171,7 +1288,7 @@
                                 <p>
                                     BANGALORE <br>
                                     KARNATAKA, INDIA<br><br>
-                                    <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
+                                    <strong>Phone:</strong> +91 7975935848,<br>
                                     <strong>Email:</strong> info@Learntec.com<br>
                                 </p>
 
