--- a/learntec/index.html
+++ b/learntec/index.html
@@ -118,7 +118,7 @@
                 <div class="info-widget info-widget2">
                     <h4 class="offset-title mb-20">Contact Info</h4>
                     <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
-                    <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
+                    <p> <i class="fal fa-phone"></i> +91 7975935848,</p>
                     <p> <i class="fal fa-envelope-open"></i> info@Learntec.com </p>
                 </div>
             </div>
@@ -1011,7 +1011,7 @@
                                     <p>
                                         BANGALORE <br>
                                         KARNATAKA, INDIA<br><br>
-                                        <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
+                                        <strong>Phone:</strong> +91 7975935848,  <br>
                                         <strong>Email:</strong> info@Learntec.com<br>
                                     </p>
 
