--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
 	<ul>
-		<li><a href="./e-commerce/fastkart/index.html">E-commerce</a></li>
+	<!--	<li><a href="./e-commerce/fastkart/index.html">E-commerce</a></li>
 		<li><a href="./BoutiquePrism/index.html">Botique</a></li>
-		<li><a href="./kinder/index.html">Pre-school</a></li>
+		<li><a href="./kinder/index.html">Pre-school</a></li> -->
 		<li><a href="./learntec/index.html">Learntec</a></li>
-		<li><a href="./Chow/index.html">Chow restaurant</a></li>
+	<!--	<li><a href="./Chow/index.html">Chow restaurant</a></li> -->
 
 	</ul>
-	<ul>
+<!--	<ul>
 		<li><a href="./one/3d cards.html">cards</a></li>
 		<li><a href="./one/card1.html">cards</a></li>
 		<li><a href="./one/carousal.html">carousal</a></li>
@@ -27,7 +27,7 @@
 		<li><a href="./one/banners.html">banner</a></li>
 		<li><a href="./one/cardhover.html">Card hover</a></li>
 		<li><a href="./one/testimonial.html">Testimonial</a></li>
-	</ul>
+	</ul> -->
 
 </body>
 
