--- a/learntec/index.html
+++ b/learntec/index.html
@@ -250,7 +250,7 @@
                                     <input type="email" placeholder="Enter your email" name="email" required>
 
                                     <label for="email"><b>City</b></label>
-                                    <input type="text" placeholder="Enter City name" name="text" required>
+                                    <input type="text" placeholder="Enter your City" name="text" required>
                                     <br>
 
                                     <label for="address"><b>Courses</b></label> <br>
@@ -262,7 +262,7 @@
                                                 <option value="2">Cyber Security</option>
                                                 <option value="2">Python</option>
                                                 <option value="2">Data Analyst</option>
-                                            </select> <br><br>
+                                            </select> <br><br> 
 
                                     
                                     <!-- <label>
@@ -271,10 +271,12 @@
                                         </label>
                         
                                         <p>By creating an account you agree to our <a href="#"
-                                                style="color:dodgerblue">Terms & Privacy</a>.</p>-->
+                                                style="color:dodgerblue">Terms & Privacy</a>.</p>--> <br>
 
 
-                                    <button type="submit" class="Confirmbtn" style="height: 50px;">Submit</button>
+                                    <button type="submit" class="Confirmbtn" onclick="myFunction()" style="height: 50px;">Submit</button>
+
+                                    <div id="snackbar">Thaks for submitting your response.Our team will reach you soon.</div>
                                 </div>
                         </div>
                         </form>
@@ -1171,6 +1173,14 @@
     <script src="assets/js/jquery.nice-select.js"></script>
     <script src="assets/js/jquery.easypiechart.js"></script>
     <script src="assets/js/main.js"></script>
+
+    <script>
+        function myFunction() {
+          var x = document.getElementById("snackbar");
+          x.className = "show";
+          setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+        }
+        </script>
 </body>
 
 </html>
